--- a/css/style.scss
+++ b/css/style.scss
@@ -21,6 +21,14 @@ body.daltonism {
     background: transparent;
     color: yellow;
     outline: none;
+    border: 1px dashed yellow;
+  }
+
+  .main {
+    .intro {
+      background: black;
+      color: yellow;
+    }
   }
 }
 
@@ -71,6 +79,15 @@ body.daltonism {
     background: hsl(120, 100%, 75%) url("/img/tiger.jpg") no-repeat fixed center;
     height: 100vh;
     width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    h2,
+    p {
+      width: 60vw;
+    }
   }
 }
 
